--- a/src/app/login/forgotpassword/forgotpassword.component.html
+++ b/src/app/login/forgotpassword/forgotpassword.component.html
@@ -38,7 +38,8 @@
               <div class="input-wrapper ">
                 <input id="IDcard" name="IDcard" maxlength="13" type="text" formControlName="IDcard" required>
                 <div class="form-control-feedback" *ngIf="this.formforgot.controls.IDcard.errors && ( this.formforgot.controls.IDcard.touched)">
-                  <p *ngIf="this.formforgot.controls.IDcard.errors.required || this.formforgot.controls.IDcard.errors?.minlength">{{ 'Validation.required' | translate }}</p>
+                  <p *ngIf="this.formforgot.controls.IDcard.errors.required || this.formforgot.controls.IDcard.errors?.minlength">{{
+                    'Validation.required' | translate }}</p>
                   <!-- <p *ngIf="this.formforgot.controls.IDcard.errors.pattern">ข้อมูลไม่ถูกต้อง</p>																								 -->
                 </div>
               </div>
@@ -52,6 +53,15 @@
                   <p *ngIf="this.formforgot.controls.email.errors.required">{{ 'Validation.required' | translate }}</p>
                   <p *ngIf="this.formforgot.controls.email.errors.pattern">{{ 'Validation.incorrect' | translate }}</p>
                 </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 form-group" id="recaptcha2" [ngClass]="ValidatorDisplayCss3('recaptcha')">
+              <ngx-recaptcha2 #captchaElem [size]="size" [hl]="lang" [theme]="theme" [type]="type"
+                formControlName="recaptcha">
+              </ngx-recaptcha2>
+              <div class="form-control-feedback" *ngIf="this.formforgot.controls.recaptcha.errors && ( this.formforgot.controls.recaptcha.touched)">
+                <p *ngIf="this.formforgot.controls.recaptcha.errors.required">{{ 'Validation.required' | translate }}</p>
               </div>
             </div>
           </div>
