--- a/src/app/report/confirmation/confirmation.component.html
+++ b/src/app/report/confirmation/confirmation.component.html
@@ -110,7 +110,7 @@
           </li>
 
           <div class="col-md-12 mt-5 text-center" *ngIf="nolist">
-              <p>ไม่พบรายการดังกล่าว</p>
+              <p>{{ 'CONTENT.not-found' | translate }}</p>
             </div>
           <!-- <li>
             <div class="row">
