--- a/src/app/report/not-available-list/not-available-list.component.html
+++ b/src/app/report/not-available-list/not-available-list.component.html
@@ -101,7 +101,7 @@
               <tbody *ngIf="unallocatedreportlist">
                 <tr class="text-center" *ngIf="nolist">
                   <td colspan="11">
-                    <p>ไม่พบรายการดังกล่าว</p>
+                    <p>{{ 'CONTENT.not-found' | translate }}</p>
                   </td>
                 </tr>
                 <ng-container *ngFor="let type of unallocatedreportlist?.unallocatedreport; let i = index">
