--- a/src/app/report/past-events/past-events.component.html
+++ b/src/app/report/past-events/past-events.component.html
@@ -215,7 +215,7 @@
           </tr> -->
           <tr class="text-center" *ngIf="nolist">
             <td colspan="11">
-              <p>ไม่พบรายการดังกล่าว</p>
+              <p>{{ 'CONTENT.not-found' | translate }}</p>
             </td>
           </tr>
           <ng-container *ngFor="let list of statementlist | paginate: { itemsPerPage: 10, currentPage: p } ; let i = index">
