--- a/src/app/report/receipt-history/receipt-history.component.html
+++ b/src/app/report/receipt-history/receipt-history.component.html
@@ -239,7 +239,7 @@
           </tr> -->
           <tr class="text-center" *ngIf="nolist">
             <td colspan="11">
-              <p>ไม่พบรายการดังกล่าว</p>
+              <p>{{ 'CONTENT.not-found' | translate }}</p>
             </td>
           </tr>
           <ng-container *ngFor="let list of reportlist | paginate: { itemsPerPage: 10, currentPage: p } ; let y = index">
