--- a/src/app/report/today-list/today-list.component.html
+++ b/src/app/report/today-list/today-list.component.html
@@ -114,7 +114,7 @@
               <tbody *ngIf="todayreport">
                 <tr class="text-center" *ngIf="nolist">
                   <td colspan="11">
-                    <p>ไม่พบรายการดังกล่าว</p>
+                    <p>{{ 'CONTENT.not-found' | translate }}</p>
                   </td>
                 </tr>
                 <ng-container *ngFor="let unitholder of todayreport?.todayreport; let i = index">
