--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -655,7 +655,7 @@ h4{
     .wrap-suitability{
       .control-label{
         margin: 0;
-        display: unset;
+        display: inline;
       }
     //   .label-txt{
     //     border-bottom: 5px solid $color-primary;
