--- a/src/app/regular-list/regular-purchase/regular-purchase.component.html
+++ b/src/app/regular-list/regular-purchase/regular-purchase.component.html
@@ -6,7 +6,7 @@
   /* tbody tr.bgforlhfund:nth-child(odd) {background: #FFF} */
 </style>
 <div class="fund-table-wrapper" *ngIf="page == 'regular-purchase'">
-  <div class="heading-section">
+  <div class="heading-section" *ngIf="userall != ''">
     <div class="detail-head-wrapper">
       <div class="row">
         <div class="col-md-12 col-12 icon-option mb-3">
@@ -35,8 +35,8 @@
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block">
             <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
-              <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
+              <option [ngValue]="unitholder" *ngFor="let unitholder of userall?.unitholderlist; let i = index">{{ unitholder?.UnitholderNo
+                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder?.AgentCode }})</ng-container>
               </option>
             </select>
           </div>
@@ -44,18 +44,18 @@
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-          <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
+          <span class="txt-middle">{{ userselect?.FirstName}} {{ userselect?.LastName}}</span>
         </div>
 
         <div class="col-sm-6 col-md-6">
           <p>{{ 'CONTENT.address' | translate }}</p>
-          <span class="txt-middle">{{ userselect.ContactAddress}}</span>
+          <span class="txt-middle">{{ userselect?.ContactAddress}}</span>
         </div>
 
       </div>
     </div>
   </div>
-  <div class="detail-body-wrapper">
+  <div class="detail-body-wrapper" *ngIf="userall != ''">
     <form [formGroup]="formsubstanding">
       <div class="row">
         <div class="col-md-12">
@@ -209,7 +209,7 @@
       </div>
     </form>
   </div>
-  <div class="detail-footer-wrapper">
+  <div class="detail-footer-wrapper" *ngIf="userall != ''">
     <div class="row">
       <div class="col-md-6 text-left">
         <h4>{{ 'CONTENT.regular-purchase-list' | translate }}
@@ -222,7 +222,7 @@
         <label>{{ 'CONTENT.view-all' | translate }}</label>
       </div> -->
       <div class="col-md-12 mt-5 text-center" *ngIf="nolist">
-        <p>ไม่มีรายการที่รอดำเนินงาน</p>
+        <p>{{ 'CONTENT.no-list' | translate }}</p>
       </div>
 
       <div class="col-md-12" *ngIf="!nolist">
@@ -311,6 +311,13 @@
 
     </div>
   </div>
+  <div class="detail-footer-wrapper" *ngIf="userall == ''">
+      <div class="row">
+        <div class="col-md-12 mt-5 text-center">
+          <p>ไม่พบเลขที่ผู้ถือหน่วยลงทุน ไม่สามารถทำรายการได้</p>
+        </div>
+      </div>
+    </div>
 </div>
 <!-- regular-purchase -->
 <div class="fund-table-wrapper" *ngIf="page == 'regular-purchase-step1'">
@@ -437,7 +444,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>  
 </div>
 <!-- regular-purchase-step1 -->
 
@@ -552,11 +559,11 @@
         <div class="row mt-3">
           <div class="col-md-6 col-6">
             <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
-            <span>{{ userselect.UnitholderNo }} <ng-container *ngIf="userselect.AgentCode">({{userselect.AgentCode }})</ng-container></span>
+            <span>{{ userselect?.UnitholderNo }} <ng-container *ngIf="userselect.AgentCode">({{userselect?.AgentCode }})</ng-container></span>
           </div>
           <div class="col-md-6 col-6">
             <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
-            <span>{{ userselect.FirstName}} {{ userselect.LastName}}</span>
+            <span>{{ userselect?.FirstName}} {{ userselect?.LastName}}</span>
           </div>
 
           <div class="col-md-12 mt-4">
