--- a/src/app/rmf-ltf/certificate-rmf/certificate-rmf.component.html
+++ b/src/app/rmf-ltf/certificate-rmf/certificate-rmf.component.html
@@ -116,7 +116,7 @@
             </div>
           </li>
           <div class="col-md-12 mt-5 text-center" *ngIf="nolist">
-              <p>ไม่พบรายการดังกล่าว</p>
+              <p>{{ 'CONTENT.not-found' | translate }}</p>
             </div>
 
         </ul>
