--- a/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
+++ b/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
@@ -82,7 +82,7 @@
         <tbody>
           <tr class="text-center" *ngIf="nolist">
             <td colspan="11">
-              <p>ไม่พบรายการดังกล่าว</p>
+              <p>{{ 'CONTENT.not-found' | translate }}</p>
             </td>
           </tr>
           <ng-container *ngFor="let orderltflist of ltflist">
